--- a/src/components/PhotoModal/PhotoModal.css
+++ b/src/components/PhotoModal/PhotoModal.css
@@ -14,6 +14,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  flex: 0 0 auto;
 }
 
 .PhotoModal .sidebar {
@@ -29,9 +30,14 @@
   margin-right: 0;
 }
 
-.PhotoModal .username {
+.PhotoModal .user {
   display: flex;
   align-items: center;
+  cursor: pointer;
+}
+
+.PhotoModal .username {
+  word-break: break-all;
 }
 
 .PhotoModal .photo.profile {
@@ -39,10 +45,24 @@
   padding-bottom: 40px;
   border-radius: 100%;
   margin-right: 1.25em;
+  cursor: pointer;
 }
 
 .PhotoModal .comments-container {
   flex-grow: 1;
+  height: 2rem;
+  overflow-y: auto;
+}
+
+.PhotoModal .comments-container::-webkit-scrollbar {
+  width: 7px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+}
+
+.PhotoModal .comments-container::-webkit-scrollbar-thumb {
+  background-color: #999;
+  border-radius: 5px;
 }
 
 .PhotoModal .comments-container .comment {
@@ -120,6 +140,11 @@
   cursor: pointer;
 }
 
+.PhotoModal .arrow i.hide {
+  cursor: default;
+  visibility: hidden;
+}
+
 .PhotoModal .close-button {
   position: absolute;
   top: 0;
@@ -133,4 +158,24 @@
 .PhotoModal i.close-button:hover,
 .PhotoModal .arrow:hover {
   color: rgba(255, 255, 255, 0.65);
+}
+
+@media (max-width: 768px) {
+  .PhotoModal .modal-container {
+    flex-direction: column;
+  }
+
+  .PhotoModal .photo {
+    width: 100%;
+    padding-bottom: 100%;
+  }
+
+  .PhotoModal .sidebar {
+    width: 100%;
+  }
+
+  .PhotoModal .comments-container {
+    height: 100%;
+    max-height: 200px;
+  }
 }
