--- a/src/components/Shared/Modal.css
+++ b/src/components/Shared/Modal.css
@@ -6,6 +6,11 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
+  overflow-y: auto;
+}
+
+.Modal .overlay::-webkit-scrollbar {
+  display: none;
 }
 
 .Modal .content {
