--- a/src/components/PhotoModal/PhotoModal.css
+++ b/src/components/PhotoModal/PhotoModal.css
@@ -67,7 +67,7 @@
 
 .PhotoModal .comments-container .comment {
   margin-bottom: 10px;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .PhotoModal .comments-container .comment .username a {
