--- a/src/components/Shared/Navbar.css
+++ b/src/components/Shared/Navbar.css
@@ -54,6 +54,7 @@
   padding-bottom: 30px;
   border-radius: 100%;
   margin-right: 0.5em;
+  box-shadow: 0px 0px 0px 1px #7c7c90;
 }
 
 .navbar div.logout {
