--- a/src/components/PhotoModal/PhotoModal.css
+++ b/src/components/PhotoModal/PhotoModal.css
@@ -21,6 +21,7 @@
   float: left;
   width: 34.999%;
   padding: 2em;
+  padding-bottom: 1.25em;
   display: flex;
   flex-direction: column;
 }
@@ -142,6 +143,13 @@
 .PhotoModal .new-comment textarea {
   font-size: 12px;
   resize: none;
+}
+
+.PhotoModal .new-comment label {
+  float: right;
+  color: #aaaaaa;
+  margin-top: 5px;
+  margin-bottom: 0;
 }
 
 .PhotoModal .arrow {
