--- a/src/components/PhotoGrid/PhotoGrid.css
+++ b/src/components/PhotoGrid/PhotoGrid.css
@@ -50,3 +50,10 @@
   font-size: 2.25em;
   margin-bottom: 10px;
 }
+
+.PhotoGrid .noMorePhotos p {
+  text-align: center;
+  margin: 30px 0 40px;
+  font-size: 15px;
+  color: #444;
+}
